# sow

./: .pre-commit-config.yaml  AGENTS.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: prd.md  rfc.md
docs/v1/: config-schema.md  implementation-plan.md  prd.md  rfc.md
docs/v1/examples/: full-stack.yaml
outpost/: config.py  constants.py  paths.py
outpost/cli/: app.py
outpost/engine/: __init__.py  apply.py  health.py  ports.py  render.py  stage.py  update.py
outpost/models/: __init__.py  config.py
outpost/state/: __init__.py  io.py  store.py
outpost/sysdeps/: __init__.py  git.py  journalctl.py  nginx.py  run.py  systemctl.py
outpost/templates/: cloudflared.j2  nginx_server.j2
sow/: __init__.py  config.py
sow/cli/: app.py
sow/mcp/: server.py
tests/integration/: test_apply.py  test_e2e.py  test_stage.py  test_update.py
tests/mocks/: __init__.py  runner.py
tests/unit/: conftest.py  test_cli_app.py  test_config.py  test_config_edit.py  test_health.py  test_mcp_server.py  test_mock_runner.py  test_models.py  test_render_nginx_cloudflared.py  test_state_io.py  test_state_store.py  test_sysdeps_git.py  test_sysdeps_journalctl.py  test_sysdeps_nginx.py  test_sysdeps_run.py  test_sysdeps_systemctl.py
