[project]
name = "outpost"
version = "0.1.0"
description = "A deterministic deployment engine that turns a YAML file into git-sourced systemd user services behind a user-level NGINX, exposed through Cloudflare Tunnel."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [{ name = "Victor Busque" }]
dependencies = [
    "typer>=0.15",
    "pydantic>=2.9",
    "jinja2>=3.1",
    "mcp>=1.2",
    "pyyaml>=6.0.3",
]

[project.scripts]
outpost = "outpost.cli.app:app"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "ty>=0.0.1a7",
    "pytest>=8.3",
    "pre-commit>=4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["outpost"]

# ---- ruff: formatter + linter -----------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# Jinja templates and vendored example configs are not Python.
exclude = ["outpost/templates/*.j2"]

[tool.ruff.lint.per-file-ignores]
# Typer commands may have few statements; allow unused imports in __init__.
"tests/**" = ["E501"]

# ---- ty: strict type checker (mypy --strict fallback) -----------------------
[tool.ty.environment]
python-version = "3.13"

# ---- pytest -----------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
