[project]
name = "sow-cli"
dynamic = ["version"]
description = "A deterministic deployment engine that turns a YAML file into git-sourced systemd user services behind a user-level NGINX, exposed through Cloudflare Tunnel."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [{ name = "Victor Busque" }]
dependencies = [
    "typer>=0.15",
    "pydantic>=2.9",
    "jinja2>=3.1",
    "mcp>=1.2",
    "pyyaml>=6.0.3",
]
keywords = [
    "deployment",
    "systemd",
    "nginx",
    "cloudflare",
    "cloudflare-tunnel",
    "mcp",
    "self-hosting",
    "infrastructure",
    "cli",
    "reverse-proxy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/VictorBusque/sow"
Documentation = "https://github.com/VictorBusque/sow/tree/main/docs/v1"
Repository = "https://github.com/VictorBusque/sow"
Issues = "https://github.com/VictorBusque/sow/issues"
Changelog = "https://github.com/VictorBusque/sow/releases"

[project.scripts]
sow = "sow.cli.app:app"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "ty>=0.0.1a7",
    "pytest>=8.3",
    "pre-commit>=4.1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sow"]

# Version is derived from git tags (setuptools-scm via hatch-vcs).
# The git tag vX.Y.Z is the single source of truth; never edit a version by hand.
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "0.0.0"

# ---- ruff: formatter + linter -----------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# Jinja templates and vendored example configs are not Python.
exclude = ["sow/templates/*.j2"]

[tool.ruff.lint.per-file-ignores]
# Typer commands may have few statements; allow unused imports in __init__.
"tests/**" = ["E501"]

# ---- ty: strict type checker (mypy --strict fallback) -----------------------
[tool.ty.environment]
python-version = "3.13"

# ---- pytest -----------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
